overflow fix

--- a/css/main/mainResposive.css
+++ b/css/main/mainResposive.css
@@ -5,6 +5,9 @@
 
 
 @media (max-width: 400px) {
+    body{
+        overflow-x: hidden;
+    }
     header{
           max-width: 100%;
         justify-content: space-between;
